--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
