--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nax",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.5.5",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
