--- a/config/config.json
+++ b/config/config.json
@@ -2,25 +2,22 @@
   "development": {
     "username": "root",
     "password": "admin",
-    "database": "shirts7",
+    "database": "solareq2",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": "admin",
-    "database": "shirts7",
+    "database": "solareq2",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": "admin",
-    "database": "shirts7",
+    "database": "solareq2",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "mysql"
   }
 }
