--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "passport-local": "^1.0.0",
     "querystring": "^0.2.0",
     "redis": "^2.8.0",
-    "sequelize": "^5.11.0",
+    "sequelize": "^5.22.3",
     "url": "^0.11.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
