--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
     "username": "root",
-    "password": "admin",
-    "database": "solareq2",
+    "password": "password",
+    "database": "energy",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "admin",
-    "database": "solareq2",
+    "password": "password",
+    "database": "energy",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "admin",
-    "database": "solareq2",
+    "password": "password",
+    "database": "energy",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
