--- a/config/config.json
+++ b/config/config.json
@@ -3,21 +3,24 @@
     "username": "root",
     "password": "password",
     "database": "energy",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "host": "mysql_db",
+    "dialect": "mysql",
+    "port": 3306
   },
   "test": {
     "username": "root",
     "password": "password",
     "database": "energy",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "host": "mysql_db",
+    "dialect": "mysql",
+    "port": 3306
   },
   "production": {
     "username": "root",
     "password": "password",
     "database": "energy",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "host": "mysql_db",
+    "dialect": "mysql",
+    "port": 3306
   }
 }
