add php admin container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,15 @@
 version: '3.3'
 services:
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+      - '8080:80'
+    environment:
+      - PMA_HOST=mysql_db
+    depends_on: 
+      - mysql_db
+
   mysql_db:
     # image: mysql:5.7
     # image: mysql:8.0.19
