--- a/config/config.json
+++ b/config/config.json
@@ -1,25 +1,25 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "rootadmin",
     "database": "energy",
-    "host": "mysql_db",
+    "host": "localhost",
     "dialect": "mysql",
     "port": 3306
   },
   "test": {
     "username": "root",
-    "password": "password",
+    "password": "rootadmin",
     "database": "energy",
-    "host": "mysql_db",
+    "host": "localhost",
     "dialect": "mysql",
     "port": 3306
   },
   "production": {
     "username": "root",
-    "password": "password",
+    "password": "rootadmin",
     "database": "energy",
-    "host": "mysql_db",
+    "host": "localhost",
     "dialect": "mysql",
     "port": 3306
   }
