--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=password
+MYSQLDB_ROOT_PASSWORD=Maradona@#
 MYSQLDB_DATABASE=energy
 MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
