--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,35 +1,28 @@
 version: '3.3'
 services:
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    restart: always
-    ports:
-      - '8080:80'
-    environment:
-      - PMA_HOST=mysql_db
-    depends_on: 
-      - mysql_db
+  # phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin
+  #   restart: always
+  #   ports:
+  #     - '8080:80'
+  #   environment:
+  #     - PMA_HOST=mysql_db
+  #   depends_on: 
+  #     - mysql_db
 
-  mysql_db:
-    # image: mysql:8.0.19
-    image: mysql:8.0.19
-    # command: '--default-authentication-plugin=mysql_native_password'
-    # build: ./conf
-    restart: unless-stopped
-    volumes:
-      - db_data:/var/lib/mysql
-      - ./database/testdump.sql:/docker-entrypoint-initdb.d/testdump.sql
-
-      # - mysql_db:/var/lib/mysql
-      # - ./mysql_db/init.sql:/docker-entrypoint-initdb.d/init.sql
-
-    env_file:
-      - .env
-    environment:
-      - MYSQL_DATABASE=$MYSQLDB_DATABASE
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-    ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+  # mysql_db:
+  #   image: mysql:8.0.19
+  #   restart: unless-stopped
+  #   volumes:
+  #     - db_data:/var/lib/mysql
+  #     - ./database/testdump.sql:/docker-entrypoint-initdb.d/testdump.sql
+  #   env_file:
+  #     - .env
+  #   environment:
+  #     - MYSQL_DATABASE=$MYSQLDB_DATABASE
+  #     - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+  #   ports:
+  #     - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
 
 
   app:
