--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "querystring": "^0.2.0",
     "redis": "^4.0.4",
     "sequelize": "^6.31.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "url": "^0.11.0",
     "uuid": "^3.3.2"
   },
