--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,20 +55,22 @@ services:
     build: .
     restart: unless-stopped
     env_file: .env
-    ports:
-      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
-    # expose:
-    #   - "$NODE_DOCKER_PORT"
+    # ports:
+    #   - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
+    expose:
+      - "8082"
     environment:
       - DB_HOST=mysql_db
       - DB_USER=$MYSQLDB_USER
       - DB_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - DB_NAME=$MYSQLDB_DATABASE
       - DB_PORT=$MYSQLDB_DOCKER_PORT
+      - HTTPS_METHOD=redirect   # <--- Forces HTTP → HTTPS
       - VIRTUAL_HOST=walocho.co.ke
+      - VIRTUAL_PORT=5000
       - LETSENCRYPT_HOST=walocho.co.ke
       - LETSENCRYPT_EMAIL=naxoduor7@gmail.com
-      - HTTPS_METHOD=redirect   # <--- Forces HTTP → HTTPS
+      - VIRTUAL_PATH=/api
 
     stdin_open: true
     tty: true
@@ -76,3 +78,6 @@ services:
     #   - mysql_db
 volumes:
    db_data:
+
+
+
