--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,32 +2,36 @@ version: '3.3'
 
 networks:
   proxy:       
-    external: false
+    external: true
 
 services:
-  # phpmyadmin:
-  #   image: phpmyadmin/phpmyadmin
-  #   restart: always
-  #   ports:
-  #     - '8080:80'
-  #   environment:
-  #     - PMA_HOST=mysql_db
-  #   depends_on: 
-  #     - mysql_db
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+      - '8080:80'
+    environment:
+      - PMA_HOST=mysql_db
+    depends_on: 
+      - mysql_db
+    networks:
+      - proxy
 
-  # mysql_db:
-  #   image: mysql:8.0.19
-  #   restart: unless-stopped
-  #   volumes:
-  #     - db_data:/var/lib/mysql
-  #     - ./database/testdump.sql:/docker-entrypoint-initdb.d/testdump.sql
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     - MYSQL_DATABASE=$MYSQLDB_DATABASE
-  #     - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-  #   ports:
-  #     - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+  mysql_db:
+    image: mysql:8.0.19
+    restart: unless-stopped
+    volumes:
+      - db_data:/var/lib/mysql
+      - ./database/testdump.sql:/docker-entrypoint-initdb.d/testdump.sql
+    env_file:
+      - .env
+    environment:
+      - MYSQL_DATABASE=$MYSQLDB_DATABASE
+      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
+    ports:
+      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+    networks:
+      - proxy
 
 
 
