--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,41 @@ networks:
     external: false
 
 services:
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    container_name: nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./certs:/etc/nginx/certs
+      - ./vhost.d:/etc/nginx/vhost.d
+      - ./html:/usr/share/nginx/html
+      - /var/run/docker.sock:/tmp/docker.sock:ro   # <-- REQUIRED
+
+    networks:
+      - proxy
+
+
+  letsencrypt:
+    image: nginxproxy/acme-companion
+    container_name: nginx-proxy-acme
+    restart: unless-stopped
+    volumes:
+      - ./certs:/etc/nginx/certs
+      - ./vhost.d:/etc/nginx/vhost.d
+      - ./html:/usr/share/nginx/html
+      - /var/run/docker.sock:/var/run/docker.sock:ro   # REQUIRED for acme
+
+
+    depends_on:
+      - nginx-proxy
+    environment:
+      - NGINX_PROXY_CONTAINER=nginx-proxy
+
+    networks:
+      - proxy
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     restart: always
@@ -32,33 +67,6 @@ services:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     networks:
       - proxy
-
-
-
-  # nginx-proxy:
-  #   image: jwilder/nginx-proxy
-  #   container_name: nginx-proxy
-  #   restart: unless-stopped
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./certs:/etc/nginx/certs
-  #     - /etc/nginx/vhost.d
-  #     - /usr/share/nginx/html
-  #     - /var/run/docker.sock:/tmp/docker.sock:ro
-
-  # letsencrypt:
-  #   image: jrcs/letsencrypt-nginx-proxy-companion
-  #   container_name: nginx-proxy-le
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ./certs:/etc/nginx/certs
-  #     - /etc/nginx/vhost.d
-  #     - /usr/share/nginx/html
-  #     - /var/run/docker.sock:/tmp/docker.sock:ro
-  #   depends_on:
-  #     - nginx-proxy
 
   app:
     build: .
